JR-5696 Maven: generate rebel.xml under src/main/resources, improved pom.xml and made small refactoring